Fixed safari overflow bug; cmsadmin padding fix; Closes #239

--- a/src/admin/resources/scss/components/_cmsadmin.scss
+++ b/src/admin/resources/scss/components/_cmsadmin.scss
@@ -5,7 +5,9 @@
 
     @media (min-width: $mobile-nav-breakpoint) {
         margin-right: $blockholder-width;
-        overflow: hidden auto;
+        overflow-x: hidden;
+        overflow-y: auto;
+        margin-top: -10px;
     }
 
     > .row {
